procedure launches snippets- and features- subprocesses.

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     django
     pyzmq
     quantities
+    typer
     neo @ git+https://github.com/NeuralEnsemble/python-neo.git
     pylsl
     pytf @ git+https://github.com/SachsLab/pytf.git
@@ -58,5 +59,5 @@ gui_scripts =
     dbs-mapping = open_mer.scripts.MappingGUI:main
     dbs-comments = open_mer.scripts.CommentsGUI:main
     dbs-ddu = open_mer.scripts.DepthGUI:main
-    dbs-meracquire = open_mer.scripts.Depth_Process:main
+    dbs-meracquire = open_mer.scripts.Segments_Process:main
     dbs-procfeatures = open_mer.scripts.Features_Process:main
